--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "autoprefixer": "^10.4.19",
     "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.3"
   },
   "devDependencies": {
     "postcss": "^8",
